--- a/arch/Dockerfile
+++ b/arch/Dockerfile
@@ -25,6 +25,7 @@ RUN useradd -m valet \
     && echo "valet ALL=(ALL:ALL) NOPASSWD:ALL" > /etc/sudoers.d/valet
 
 # Install Dependences
+RUN pacman -Syu --noconfirm
 RUN pacman -S --noconfirm \
         nginx curl zip unzip git php
 
