Sync Pacman database before operations

--- a/arch/Dockerfile
+++ b/arch/Dockerfile
@@ -3,7 +3,9 @@ FROM dock0/full_arch:latest
 MAINTAINER Leonardo Nodari <nodarileonardo@gmail.com>
 
 # Make docker more real
-RUN pacman -S --noconfirm systemd && pacman -Sc --noconfirm && \
+RUN pacman -Syu && \
+    pacman -S --noconfirm systemd && \
+    pacman -Sc --noconfirm && \
     (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*;\
     rm -f /etc/systemd/system/*.wants/*;\
